--- a/css/halfway_house_search.css
+++ b/css/halfway_house_search.css
@@ -64,6 +64,8 @@ body {
   padding: 4px 30px;
   background-color: transparent;
   cursor: pointer;
+  -webkit-transition: .3s all;
+  -o-transition: .3s all;
   transition: .3s all;
   outline: none; }
   .defaultBtn:hover {
@@ -93,6 +95,8 @@ body {
     position: absolute;
     left: -100%;
     background-color: transparent;
+    -webkit-transition: .3s;
+    -o-transition: .3s;
     transition: .3s;
     z-index: -1; }
   .btn-more:hover:before {
@@ -156,6 +160,7 @@ header {
   height: 100vh;
   position: fixed;
   padding-left: 15px;
+  -webkit-box-shadow: 2px 0 10px rgba(153, 153, 153, 0.315);
   box-shadow: 2px 0 10px rgba(153, 153, 153, 0.315);
   z-index: 999; }
   header .logo {
@@ -176,10 +181,15 @@ header {
       position: relative; }
       header ul li:hover {
         background-color: #fff;
+        -webkit-box-shadow: -2px 3px 6px rgba(63, 62, 62, 0.397);
         box-shadow: -2px 3px 6px rgba(63, 62, 62, 0.397);
+        -webkit-transition: .3s;
+        -o-transition: .3s;
         transition: .3s; }
       header ul li:hover a {
         color: #000;
+        -webkit-transition: .3s;
+        -o-transition: .3s;
         transition: .3s; }
       header ul li a {
         width: 185px;
@@ -190,9 +200,14 @@ header {
         padding: 15px 20px; }
   header .icons {
     width: 180px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
     padding: 15px;
     padding-right: 20px;
+    -webkit-justify-content: space-around;
+    -ms-flex-pack: distribute;
     justify-content: space-around;
     position: absolute;
     bottom: 40px; }
@@ -213,7 +228,11 @@ header {
       text-decoration: none;
       color: #fff; }
       header .icons a:hover {
+        -webkit-transform: scale(1.15);
+        -ms-transform: scale(1.15);
         transform: scale(1.15);
+        -webkit-transition: .3s;
+        -o-transition: .3s;
         transition: .3s; }
 
 .hb {
@@ -228,7 +247,11 @@ header {
   padding: 15px 10px 10px 10px; }
 
 header.active {
+  -webkit-transform: translateY(0);
+  -ms-transform: translateY(0);
   transform: translateY(0);
+  -webkit-transition: .6s;
+  -o-transition: .6s;
   transition: .6s; }
 
 .hamburger .line {
@@ -283,19 +306,37 @@ footer {
   padding: 15px; }
   footer .follow {
     padding: 15px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
     align-items: center; }
   footer nav {
     margin: auto; }
     footer nav ul {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
       display: flex;
+      -webkit-justify-content: space-around;
+      -ms-flex-pack: distribute;
       justify-content: space-around; }
       footer nav ul li {
         width: 20%;
         margin: 15px; }
         footer nav ul li:hover {
+          -webkit-transform: translateY(-3px);
+          -ms-transform: translateY(-3px);
           transform: translateY(-3px);
+          -webkit-transition: .35s;
+          -o-transition: .35s;
           transition: .35s; }
         footer nav ul li a {
           text-align: center;
@@ -337,13 +378,20 @@ footer {
   overflow: hidden;
   position: relative;
   border-radius: 50%;
+  -webkit-transition: .35s;
+  -o-transition: .35s;
   transition: .35s;
+  -webkit-box-shadow: 0 5px 15px -5px rgba(0, 0, 0, 0.1);
   box-shadow: 0 5px 15px -5px rgba(0, 0, 0, 0.1);
   padding-left: 3px;
   padding-bottom: 3px;
   z-index: 1; }
   .btns .btn:hover:before {
+    -webkit-transition: .35s;
+    -o-transition: .35s;
     transition: .35s;
+    -webkit-transition-timing-function: cubic-bezier(0.31, -0.105, 0.43, 1.59);
+    -o-transition-timing-function: cubic-bezier(0.31, -0.105, 0.43, 1.59);
     transition-timing-function: cubic-bezier(0.31, -0.105, 0.43, 1.59);
     top: -10%;
     left: -10%; }
@@ -353,6 +401,8 @@ footer {
     width: 120%;
     height: 120%;
     position: absolute;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
     transform: rotate(45deg);
     top: 90%;
     left: -110%;
@@ -434,6 +484,8 @@ footer {
         border: none;
         display: inline-block;
         line-height: 2em;
+        -webkit-transition: .1s;
+        -o-transition: .1s;
         transition: .1s;
         outline: none;
         color: rgba(245, 245, 245, 0.7);
@@ -468,6 +520,8 @@ footer {
         text-align: center;
         border-radius: 1000px;
         letter-spacing: 1px;
+        -webkit-transition: .3s;
+        -o-transition: .3s;
         transition: .3s;
         color: #333;
         margin: 0 auto 30px;
@@ -564,6 +618,7 @@ footer {
 
 header ul li:nth-child(2) {
   background-color: #fff;
+  -webkit-box-shadow: -3px 3px 5px rgba(63, 62, 62, 0.199);
   box-shadow: -3px 3px 5px rgba(63, 62, 62, 0.199); }
 
 header ul li:nth-child(2) a {
@@ -581,7 +636,10 @@ header ul li:nth-child(2):after {
   position: absolute;
   top: 6.5px;
   right: -16px;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
   transform: rotate(45deg);
+  -webkit-box-shadow: 3px 3px 5px rgba(63, 62, 62, 0.199);
   box-shadow: 3px 3px 5px rgba(63, 62, 62, 0.199); }
 
 .right {
@@ -661,6 +719,7 @@ header ul li:nth-child(2):after {
       font-size: 14px;
       line-height: 30px;
       padding: 0 0 3% 5%;
+      -webkit-box-shadow: 12px 10px 20px -10px #333;
       box-shadow: 12px 10px 20px -10px #333; }
       .right .result .container .item .text h3 {
         font-size: 24px;
@@ -670,6 +729,7 @@ header ul li:nth-child(2):after {
       position: absolute;
       top: -40px;
       left: 50%;
+      -webkit-box-shadow: 12px 10px 20px -10px #333;
       box-shadow: 12px 10px 20px -10px #333; }
       .right .result .container .item .pic img {
         width: 100%; }
@@ -679,6 +739,7 @@ header ul li:nth-child(2):after {
       left: 5%;
       width: 100%;
       height: 120%;
+      -webkit-box-shadow: 12px 10px 10px -4px #aaa;
       box-shadow: 12px 10px 10px -4px #aaa;
       z-index: -3; }
     .right .result .container .item .color1 {
