--- a/css/backReport.css
+++ b/css/backReport.css
@@ -9,57 +9,46 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   border: 0;
   font-size: 100%;
   font: inherit;
-  vertical-align: baseline;
-}
+  vertical-align: baseline; }
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-  display: block;
-}
+  display: block; }
 
 body {
-  line-height: 1;
-}
+  line-height: 1; }
 
 ol, ul {
-  list-style: none;
-}
+  list-style: none; }
 
 blockquote, q {
-  quotes: none;
-}
+  quotes: none; }
 
 blockquote:before, blockquote:after {
   content: '';
-  content: none;
-}
+  content: none; }
 
 q:before, q:after {
   content: '';
-  content: none;
-}
+  content: none; }
 
 table {
   border-collapse: collapse;
-  border-spacing: 0;
-}
+  border-spacing: 0; }
 
 * {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-}
+  -moz-box-sizing: border-box; }
 
 input, select {
   font-family: 'Noto Sans TC';
-  font-weight: bolder;
-}
+  font-weight: bolder; }
 
 body {
   font-family: 'Noto Sans TC';
   font-weight: 300;
-  letter-spacing: 3px;
-}
+  letter-spacing: 3px; }
 
 .btns .btn {
   font-size: 30px;
@@ -76,79 +65,53 @@ body {
   box-shadow: 0 5px 15px -5px rgba(0, 0, 0, 0.1);
   padding-left: 3px;
   padding-bottom: 3px;
-  z-index: 1;
-}
-
-.btns .btn:hover:before {
-  transition: .35s;
-  transition-timing-function: cubic-bezier(0.31, -0.105, 0.43, 1.59);
-  top: -10%;
-  left: -10%;
-}
-
-.btns .btn:before {
-  content: '';
-  display: block;
-  width: 120%;
-  height: 120%;
-  position: absolute;
-  transform: rotate(45deg);
-  top: 90%;
-  left: -110%;
-  z-index: -1;
-}
+  z-index: 1; }
+  .btns .btn:hover:before {
+    transition: .35s;
+    transition-timing-function: cubic-bezier(0.31, -0.105, 0.43, 1.59);
+    top: -10%;
+    left: -10%; }
+  .btns .btn:before {
+    content: '';
+    display: block;
+    width: 120%;
+    height: 120%;
+    position: absolute;
+    transform: rotate(45deg);
+    top: 90%;
+    left: -110%;
+    z-index: -1; }
 
 .btns .fa {
-  vertical-align: middle;
-}
+  vertical-align: middle; }
 
 .btns .btn.facebook {
-  color: #3b5998;
-}
-
-.btns .btn.facebook:before {
-  background-color: #3b5998;
-}
-
-.btns .btn.facebook:hover {
-  color: #fff;
-}
+  color: #3b5998; }
+  .btns .btn.facebook:before {
+    background-color: #3b5998; }
+  .btns .btn.facebook:hover {
+    color: #fff; }
 
 .btns .btn.twitter {
-  color: #3cf;
-}
-
-.btns .btn.twitter:before {
-  background-color: #3cf;
-}
-
-.btns .btn.twitter:hover {
-  color: #fff;
-}
+  color: #3cf; }
+  .btns .btn.twitter:before {
+    background-color: #3cf; }
+  .btns .btn.twitter:hover {
+    color: #fff; }
 
 .btns .btn.google {
-  color: #dc4a38;
-}
-
-.btns .btn.google:before {
-  background-color: #dc4a38;
-}
-
-.btns .btn.google:hover {
-  color: #fff;
-}
+  color: #dc4a38; }
+  .btns .btn.google:before {
+    background-color: #dc4a38; }
+  .btns .btn.google:hover {
+    color: #fff; }
 
 .btns .btn.youtube {
-  color: #f00;
-}
-
-.btns .btn.youtube:before {
-  background-color: #f00;
-}
-
-.btns .btn.youtube:hover {
-  color: #fff;
-}
+  color: #f00; }
+  .btns .btn.youtube:before {
+    background-color: #f00; }
+  .btns .btn.youtube:hover {
+    color: #fff; }
 
 header {
   background-color: rgba(112, 228, 230, 0.85);
@@ -157,89 +120,64 @@ header {
   position: fixed;
   padding-left: 15px;
   box-shadow: 2px 0 10px rgba(153, 153, 153, 0.315);
-  z-index: 999;
-}
-
-header .logo {
-  position: relative;
-  top: 70px;
-  width: 180px;
-  text-align: center;
-}
-
-header .logo a {
-  text-decoration: none;
-  color: #fff;
-}
-
-header .logo img {
-  width: 90%;
-}
-
-header ul {
-  position: absolute;
-  bottom: 180px;
-}
-
-header ul li {
-  margin: 1px 0;
-  position: relative;
-}
-
-header ul li:hover {
-  background-color: #fff;
-  box-shadow: -2px 3px 6px rgba(63, 62, 62, 0.397);
-  transition: .3s;
-}
-
-header ul li:hover a {
-  color: #000;
-  transition: .3s;
-}
-
-header ul li a {
-  width: 190px;
-  display: block;
-  color: #fff;
-  text-decoration: none;
-  font-size: 18px;
-  padding: 15px 20px;
-}
-
-header .icons {
-  width: 180px;
-  display: flex;
-  padding: 15px;
-  padding-right: 20px;
-  justify-content: space-around;
-  position: absolute;
-  bottom: 40px;
-}
-
-header .icons #like {
-  font-size: 12px;
-  text-align: center;
-  line-height: 20px;
-  display: block;
-  width: 15px;
-  height: 15px;
-  position: relative;
-  color: #d33;
-  top: -17px;
-  right: -25px;
-  font-family: 'Noto Sans TC';
-  font-weight: 900;
-}
-
-header .icons a {
-  text-decoration: none;
-  color: #fff;
-}
-
-header .icons a:hover {
-  transform: scale(1.15);
-  transition: .3s;
-}
+  z-index: 999; }
+  header .logo {
+    position: relative;
+    top: 70px;
+    width: 180px;
+    text-align: center; }
+    header .logo a {
+      text-decoration: none;
+      color: #fff; }
+    header .logo img {
+      width: 90%; }
+  header ul {
+    position: absolute;
+    bottom: 180px; }
+    header ul li {
+      margin: 1px 0;
+      position: relative; }
+      header ul li:hover {
+        background-color: #fff;
+        box-shadow: -2px 3px 6px rgba(63, 62, 62, 0.397);
+        transition: .3s; }
+      header ul li:hover a {
+        color: #000;
+        transition: .3s; }
+      header ul li a {
+        width: 190px;
+        display: block;
+        color: #fff;
+        text-decoration: none;
+        font-size: 18px;
+        padding: 15px 20px; }
+  header .icons {
+    width: 180px;
+    display: flex;
+    padding: 15px;
+    padding-right: 20px;
+    justify-content: space-around;
+    position: absolute;
+    bottom: 40px; }
+    header .icons #like {
+      font-size: 12px;
+      text-align: center;
+      line-height: 20px;
+      display: block;
+      width: 15px;
+      height: 15px;
+      position: relative;
+      color: #d33;
+      top: -17px;
+      right: -25px;
+      font-family: 'Noto Sans TC';
+      font-weight: 900; }
+    header .icons a {
+      text-decoration: none;
+      color: #fff; }
+      header .icons a:hover {
+        transform: scale(1.15);
+        transition: .3s; }
 
 .defaultBtn {
   font-size: 16px;
@@ -250,14 +188,11 @@ header .icons a:hover {
   background-color: transparent;
   cursor: pointer;
   transition: .3s all;
-  outline: none;
-}
-
-.defaultBtn:hover {
-  color: white;
-  background-color: #EAAF88;
-  border-color: #EAAF88;
-}
+  outline: none; }
+  .defaultBtn:hover {
+    color: white;
+    background-color: #EAAF88;
+    border-color: #EAAF88; }
 
 .btn-more {
   width: 160px;
@@ -270,96 +205,75 @@ header .icons a:hover {
   position: relative;
   overflow: hidden;
   z-index: 2;
-  font-family: notoSans_r;
-}
-
-.btn-more:hover {
-  color: #fff;
-}
-
-.btn-more:before {
-  width: 100%;
-  height: 100%;
-  display: inline-block;
-  content: '';
-  position: absolute;
-  left: -100%;
-  background-color: transparent;
-  transition: .3s;
-  z-index: -1;
-}
-
-.btn-more:hover:before {
-  left: 0;
-  background-color: #333;
-}
-
-.btn-more:after {
-  margin-top: -7px;
-  width: 7px;
-  height: 13px;
-  background: url(../images/icon01.png) no-repeat right center;
-  position: absolute;
-  top: 50%;
-  right: 18px;
-  content: "";
-}
+  font-family: notoSans_r; }
+  .btn-more:hover {
+    color: #fff; }
+  .btn-more:before {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    content: '';
+    position: absolute;
+    left: -100%;
+    background-color: transparent;
+    transition: .3s;
+    z-index: -1; }
+  .btn-more:hover:before {
+    left: 0;
+    background-color: #333; }
+  .btn-more:after {
+    margin-top: -7px;
+    width: 7px;
+    height: 13px;
+    background: url(../images/icon01.png) no-repeat right center;
+    position: absolute;
+    top: 50%;
+    right: 18px;
+    content: ""; }
 
 .breadcrumbs {
   margin-bottom: 40px;
-  font-size: 18px;
-}
-
-.breadcrumbs a {
-  font-size: 14px;
-  text-decoration: none;
-  border-width: 1px;
-  padding: 4px 10px;
-  text-align: center;
-}
+  font-size: 18px; }
+  .breadcrumbs a {
+    font-size: 14px;
+    text-decoration: none;
+    border-width: 1px;
+    padding: 4px 10px;
+    text-align: center; }
 
 .page {
   text-align: center;
-  padding: 30px;
-}
-
-.page .pageNo {
-  text-align: center;
-  text-decoration: none;
-  padding: 5px;
-  padding-left: 7px;
-  border-radius: 0px;
-  border-width: 1px;
-  margin: 10px;
-}
+  padding: 30px; }
+  .page .pageNo {
+    text-align: center;
+    text-decoration: none;
+    padding: 5px;
+    padding-left: 7px;
+    border-radius: 0px;
+    border-width: 1px;
+    margin: 10px; }
 
 @media all and (max-width: 767px) {
   .breadcrumbs {
     margin-top: 40px;
     margin-bottom: 40px;
-    text-align: center;
-  }
-  .breadcrumbs a {
-    border: none;
-    padding: 0;
-  }
-  .breadcrumbs a:hover {
-    color: #333;
-    background-color: transparent;
-    border-color: transparent;
-  }
-}
+    text-align: center; }
+    .breadcrumbs a {
+      border: none;
+      padding: 0; }
+      .breadcrumbs a:hover {
+        color: #333;
+        background-color: transparent;
+        border-color: transparent; } }
 
 header ul li:nth-child(4) {
   background-color: #fff;
-  box-shadow: -3px 3px 5px rgba(63, 62, 62, 0.199);
-}
+  box-shadow: -3px 3px 5px rgba(63, 62, 62, 0.199); }
 
 header ul li:nth-child(4) a {
   color: #333;
   font-family: 'Noto Sans TC';
-  font-weight: 700;
-}
+  font-weight: 700; }
 
 header ul li:nth-child(4):after {
   z-index: -1;
@@ -372,97 +286,65 @@ header ul li:nth-child(4):after {
   top: 6.5px;
   right: -16px;
   transform: rotate(45deg);
-  box-shadow: 3px 3px 5px rgba(63, 62, 62, 0.199);
-}
+  box-shadow: 3px 3px 5px rgba(63, 62, 62, 0.199); }
 
 .right {
   width: calc(100% - 200px);
   margin-left: 200px;
-  color: #222;
-}
-
-.right .container1 {
-  width: 100%;
-  position: relative;
-  padding: 0 50px;
-  max-width: 3000px;
-  text-align: center;
-}
-
-.right .container1,
-.right .container1 * {
-  outline: none;
-}
-
-.right .container1 .bigImg {
-  background-size: cover;
-  margin: 0 auto;
-}
-
-.right .container1 .bigImg img {
-  width: 100%;
-  max-width: 1000px;
-}
-
-.right .container1 .adoptInfomation {
-  width: 80%;
-  margin: 100px auto 100px;
-}
-
-.right .container1 .adoptInfomation select {
-  display: block;
-}
-
-.right .container1 .adoptInfomation table {
-  width: 100%;
-  margin: 40px auto 60px;
-}
-
-.right .container1 .adoptInfomation table tr {
-  border-bottom: 1px solid #333;
-}
-
-.right .container1 .adoptInfomation table tr th,
-.right .container1 .adoptInfomation table tr td {
-  padding-top: 16px;
-  padding-bottom: 8px;
-  font-size: 14px;
-}
-
-.right .container1 .adoptInfomation table tr th .fa-trash,
-.right .container1 .adoptInfomation table tr td .fa-trash {
-  font-size: 16.8px;
-  color: firebrick;
-  cursor: pointer;
-}
-
-.right .container1 .adoptInfomation table tr th .fa-circle-o,
-.right .container1 .adoptInfomation table tr td .fa-circle-o {
-  font-size: 16.8px;
-  color: dodgerblue;
-  cursor: pointer;
-}
-
-.right .container1 .adoptInfomation table tr th .fa-times,
-.right .container1 .adoptInfomation table tr td .fa-times {
-  font-size: 16.8px;
-  color: crimson;
-  cursor: pointer;
-}
-
-.right .container1 .adoptInfomation table tr th {
-  font-size: 18px;
-  letter-spacing: 2px;
-  font-weight: bold;
-}
-
-.right .container1 .adoptInfomation a {
-  text-align: center;
-  text-decoration: none;
-  padding: 2px;
-  border-radius: 0px;
-  border-width: 1px;
-  padding-left: 5px;
-}
-
-/*# sourceMappingURL=backReport.css.map */
+  color: #222; }
+  .right .container1 {
+    width: 100%;
+    position: relative;
+    padding: 0 50px;
+    max-width: 3000px;
+    text-align: center; }
+    .right .container1,
+    .right .container1 * {
+      outline: none; }
+    .right .container1 .bigImg {
+      background-size: cover;
+      margin: 0 auto; }
+      .right .container1 .bigImg img {
+        width: 100%;
+        max-width: 1000px; }
+    .right .container1 .adoptInfomation {
+      width: 80%;
+      margin: 100px auto 100px; }
+      .right .container1 .adoptInfomation select {
+        display: block; }
+      .right .container1 .adoptInfomation table {
+        width: 100%;
+        margin: 40px auto 60px; }
+        .right .container1 .adoptInfomation table tr {
+          border-bottom: 1px solid #333; }
+          .right .container1 .adoptInfomation table tr th,
+          .right .container1 .adoptInfomation table tr td {
+            padding-top: 16px;
+            padding-bottom: 8px;
+            font-size: 14px; }
+            .right .container1 .adoptInfomation table tr th .fa-trash,
+            .right .container1 .adoptInfomation table tr td .fa-trash {
+              font-size: 16.8px;
+              color: firebrick;
+              cursor: pointer; }
+            .right .container1 .adoptInfomation table tr th .fa-circle-o,
+            .right .container1 .adoptInfomation table tr td .fa-circle-o {
+              font-size: 16.8px;
+              color: dodgerblue;
+              cursor: pointer; }
+            .right .container1 .adoptInfomation table tr th .fa-times,
+            .right .container1 .adoptInfomation table tr td .fa-times {
+              font-size: 16.8px;
+              color: crimson;
+              cursor: pointer; }
+          .right .container1 .adoptInfomation table tr th {
+            font-size: 18px;
+            letter-spacing: 2px;
+            font-weight: bold; }
+      .right .container1 .adoptInfomation a {
+        text-align: center;
+        text-decoration: none;
+        padding: 2px;
+        border-radius: 0px;
+        border-width: 1px;
+        padding-left: 5px; }
