--- a/sass/respond/_headerMedium.scss
+++ b/sass/respond/_headerMedium.scss
@@ -1,15 +1,30 @@
 @include respond-to(medium) {
     header{
         top: 0;
-        left: 0;
-        right: 0;
+        right: 5%;
         margin: auto;
-        width: 90%;
-        height: 80vh;
+        width: 30%;
+        height: 70vh;
         transform: translateY(-100%);
         border-radius: 0 0 0 30px;
         .logo{
             left: calc(50% - 90px);
+            top: 10px;
+        }
+        ul{
+            width: 90%;
+            bottom: 120px;
+            li{
+                a{
+                    width: 100%;
+                    text-align: center;
+                }
+            }
+        }
+        .icons{
+            left: 0;
+            right: 0;
+            margin: auto;
         }
     }
     .hb{
