--- a/css/guide.css
+++ b/css/guide.css
@@ -45,6 +45,10 @@ table {
   border-spacing: 0;
 }
 
+* {
+  outline: none;
+}
+
 input, select {
   font-family: 'Noto Sans TC';
   font-weight: bolder;
