--- a/css/header.css
+++ b/css/header.css
@@ -45,6 +45,10 @@ table {
 }
 
 * {
+  outline: none;
+}
+
+* {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
