--- a/sass/halfMem.scss
+++ b/sass/halfMem.scss
@@ -10,6 +10,7 @@
 @import 'modules/_btns.scss';
 @import 'modules/_header.scss';
 @import 'modules/_footer.scss';
+@import 'modules/_signIn.scss';
 @import 'modules/_halfMem.scss';
 @import 'respond/_halfMemberMedium.scss';
 @import 'respond/_halfMemberSmall.scss';
