--- a/sass/member.scss
+++ b/sass/member.scss
@@ -10,6 +10,7 @@
 @import 'modules/_header.scss';
 @import 'modules/_footer.scss';
 @import 'modules/_btns.scss';
+@import 'modules/_signIn.scss';
 @import 'modules/_member.scss';
 @import 'respond/_memberMedium.scss';
 @import 'respond/_memberSmall.scss';
