--- a/sass/modules/_forum.scss
+++ b/sass/modules/_forum.scss
@@ -34,7 +34,9 @@ body {
   cursor: pointer;
   color: #EAAF88;
 }
-
+header{
+  text-align: left;
+}
 // .con-sticky {
 //   position: sticky;
 //   top: 0;
