--- a/sass/modules/_catSearch.scss
+++ b/sass/modules/_catSearch.scss
@@ -7,6 +7,7 @@ body {
     width: calc(100% - 200px);
     margin-left: 200px;
     .container1 {
+        min-height: 80vh;
         width: 100%;
         position: relative;
         padding-top: 40px;
