好類類類類類類類欸類類類ㄟ

--- a/css/halfway_house_search.css
+++ b/css/halfway_house_search.css
@@ -772,6 +772,7 @@ header ul li:nth-child(2):after {
 }
 
 .right {
+  min-height: 85vh;
   position: relative;
   margin-left: 200px;
   padding-bottom: 50px;
