--- a/css/signIn.css
+++ b/css/signIn.css
@@ -27,18 +27,18 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat; }
-  .signUpLightbox #formShape {
+  .signUpLightbox .formShape {
     background-color: #91989f;
     width: 400px;
     height: 600px;
     float: left;
     border-radius: 0 10px 10px 0;
     position: relative; }
-    .signUpLightbox #formShape .chioce {
+    .signUpLightbox .formShape .chioce {
       text-align: center; }
-      .signUpLightbox #formShape .chioce:last-child {
+      .signUpLightbox .formShape .chioce:last-child {
         margin-top: 20px; }
-      .signUpLightbox #formShape .chioce button {
+      .signUpLightbox .formShape .chioce button {
         background-color: transparent;
         border: none;
         display: inline-block;
@@ -48,28 +48,28 @@
         color: rgba(245, 245, 245, 0.7);
         font-size: 30px;
         cursor: pointer; }
-        .signUpLightbox #formShape .chioce button:hover {
+        .signUpLightbox .formShape .chioce button:hover {
           color: #fff; }
-      .signUpLightbox #formShape .chioce .selected {
+      .signUpLightbox .formShape .chioce .selected {
         border-bottom: 1px solid #eaaf88;
         color: #fff; }
-    .signUpLightbox #formShape form {
+    .signUpLightbox .formShape form {
       padding: 10px 50px;
       margin: 0 auto;
       color: #fff;
       font-family: 'Noto Sans TC';
       font-weight: 300; }
-      .signUpLightbox #formShape form label {
+      .signUpLightbox .formShape form label {
         margin-top: 10px;
         margin-bottom: 4px;
         display: block;
         font-size: 18px; }
-        .signUpLightbox #formShape form label:first-child {
+        .signUpLightbox .formShape form label:first-child {
           margin-top: 0; }
-        .signUpLightbox #formShape form label small {
+        .signUpLightbox .formShape form label small {
           font-size: 12px;
           color: rgba(245, 245, 245, 0.7); }
-      .signUpLightbox #formShape form .formBtn {
+      .signUpLightbox .formShape form .formBtn {
         width: 240px;
         border: 1px solid #333;
         display: block;
@@ -79,61 +79,69 @@
         letter-spacing: 1px;
         transition: .3s;
         color: #333;
-        margin: 0 auto 30px; }
-        .signUpLightbox #formShape form .formBtn:hover {
+        margin: 0 auto 30px;
+        cursor: pointer; }
+        .signUpLightbox .formShape form .formBtn:hover {
           background-color: #eaaf88;
           border: 1px solid #eaaf88;
           color: #fff; }
-      .signUpLightbox #formShape form input {
+      .signUpLightbox .formShape form input {
         border: none;
         background-color: transparent;
         border-bottom: 1px solid rgba(245, 245, 245, 0.7);
         width: 100%; }
-        .signUpLightbox #formShape form input:-ms-input-placeholder {
+        .signUpLightbox .formShape form input:-ms-input-placeholder {
           line-height: 1em;
           padding: 5px 15px;
           color: rgba(245, 245, 245, 0.7);
           font-style: italic;
           font-size: 12px; }
-        .signUpLightbox #formShape form input:-moz-placeholder {
+        .signUpLightbox .formShape form input:-moz-placeholder {
           line-height: 1em;
           padding: 5px 15px;
           color: rgba(245, 245, 245, 0.7);
           font-style: italic;
           font-size: 12px; }
-        .signUpLightbox #formShape form input::-moz-placeholder {
+        .signUpLightbox .formShape form input::-moz-placeholder {
           line-height: 1em;
           padding: 5px 15px;
           color: rgba(245, 245, 245, 0.7);
           font-style: italic;
           font-size: 12px; }
-        .signUpLightbox #formShape form input::-webkit-input-placeholder {
+        .signUpLightbox .formShape form input::-webkit-input-placeholder {
           line-height: 1em;
           padding: 5px 15px;
           color: rgba(245, 245, 245, 0.7);
           font-style: italic;
           font-size: 12px; }
-      .signUpLightbox #formShape form #userPhoto {
+      .signUpLightbox .formShape form #userPhoto {
         display: none; }
-      .signUpLightbox #formShape form .formSubmitBtn {
+      .signUpLightbox .formShape form .formSubmitBtn {
         display: inline-block;
         width: 100px;
         font-size: 14px; }
-    .signUpLightbox #formShape .signInUpPos {
-      width: 170px;
-      position: absolute;
-      left: 50%;
-      margin-left: -85px;
-      bottom: 14px;
-      color: #eee;
-      font-size: 12px; }
-      .signUpLightbox #formShape .signInUpPos a {
+      .signUpLightbox .formShape form .chioce {
+        margin-top: 20px; }
+      .signUpLightbox .formShape form .signInUpPos {
+        width: 170px;
+        position: absolute;
+        left: 50%;
+        margin-left: -85px;
+        bottom: 14px;
         color: #eee;
-        border-bottom: #eee 1px solid;
-        cursor: pointer;
-        outline: none;
-        letter-spacing: 0;
-        text-decoration: none; }
+        font-size: 12px; }
+        .signUpLightbox .formShape form .signInUpPos span {
+          background-color: transparent;
+          color: #eee;
+          border-bottom: #eee 1px solid;
+          cursor: pointer;
+          outline: none;
+          letter-spacing: 0; }
+  .signUpLightbox .formShape2 {
+    display: none;
+    background-color: #bdc0ba; }
+    .signUpLightbox .formShape2 .chioce .selected {
+      border-bottom-color: #876633; }
 
 @media all and (max-width: 991px) {
   .signUpLightbox .bgImg {
@@ -141,7 +149,7 @@
     visibility: hidden;
     width: 0;
     height: 0; }
-  .signUpLightbox #formShape {
+  .signUpLightbox .formShape {
     border-radius: 10px; } }
 
 @media all and (max-width: 767px) {
@@ -150,15 +158,15 @@
     visibility: hidden;
     width: 0;
     height: 0; }
-  .signUpLightbox #formShape {
+  .signUpLightbox .formShape {
     width: 300px;
     border-radius: 10px; }
-    .signUpLightbox #formShape .chioce button {
+    .signUpLightbox .formShape .chioce button {
       font-size: 14px; }
-    .signUpLightbox #formShape form .formBtn {
+    .signUpLightbox .formShape form .formBtn {
       width: 180px;
       font-size: 14px; }
-    .signUpLightbox #formShape form .formSubmitBtn {
+    .signUpLightbox .formShape form .formSubmitBtn {
       display: inline-block;
       width: 80px;
       font-size: 14px; } }
