--- a/css/member.css
+++ b/css/member.css
@@ -752,3 +752,36 @@ header ul li:nth-child(5):after {
       display: block;
       text-align: center;
       top: -10px; } }
+
+@media all and (max-width: 991px) {
+  header {
+    top: 0;
+    right: 5%;
+    margin: auto;
+    width: 30%;
+    height: 70vh;
+    transform: translateY(-100%);
+    border-radius: 0 0 0 30px;
+    display: block !important; }
+    header .logo {
+      left: calc(50% - 90px);
+      top: 10px; }
+    header ul {
+      width: 90%;
+      bottom: 120px; }
+      header ul li a {
+        width: 100%;
+        text-align: center; }
+    header .icons {
+      left: 0;
+      right: 0;
+      margin: auto; }
+  .hb {
+    display: block; } }
+
+@media all and (max-width: 767px) {
+  header {
+    width: 90%;
+    height: 75vh; }
+    header .logo img {
+      width: 70%; } }
