--- a/sass/catSearch.scss
+++ b/sass/catSearch.scss
@@ -15,3 +15,5 @@
 @import 'respond/_catSearchMedium.scss';
 @import 'respond/_catSearchSmall.scss';
 @include navNow(1);
+@import './respond/_headerMedium.scss';
+@import './respond/_headerSmall.scss';
