--- a/sass/forum.scss
+++ b/sass/forum.scss
@@ -13,3 +13,5 @@
 @import 'modules/_forum.scss';
 @import 'modules/_signIn.scss';
 @import 'respond/_footerSmall.scss';
+@import './respond/_headerMedium.scss';
+@import './respond/_headerSmall.scss';
