--- a/sass/respond/_headerMedium.scss
+++ b/sass/respond/_headerMedium.scss
@@ -7,6 +7,7 @@
         height: 70vh;
         transform: translateY(-100%);
         border-radius: 0 0 0 30px;
+        display: block !important;
         .logo{
             left: calc(50% - 90px);
             top: 10px;
