--- a/css/forum-p1.css
+++ b/css/forum-p1.css
@@ -147,133 +147,6 @@ body {
 input, select {
   outline: none; }
 
-header {
-  background-color: #eaaf88;
-  width: 200px;
-  height: 100vh;
-  position: fixed;
-  padding-left: 15px;
-  box-shadow: 2px 0 10px rgba(153, 153, 153, 0.315);
-  z-index: 999; }
-  header .logo {
-    position: relative;
-    top: 60px;
-    width: 180px;
-    text-align: center; }
-    header .logo a {
-      text-decoration: none;
-      color: #fff; }
-    header .logo img {
-      width: 80%; }
-  header ul {
-    position: absolute;
-    bottom: 180px; }
-    header ul li {
-      margin: 1px 0;
-      position: relative; }
-      header ul li:hover {
-        background-color: #fff;
-        box-shadow: -2px 3px 6px rgba(63, 62, 62, 0.397);
-        transition: .3s; }
-      header ul li:hover a {
-        color: #000;
-        transition: .3s; }
-      header ul li a {
-        width: 185px;
-        display: block;
-        color: #fff;
-        text-decoration: none;
-        font-size: 18px;
-        padding: 15px 20px; }
-  header .icons {
-    width: 180px;
-    display: flex;
-    padding: 15px;
-    padding-right: 20px;
-    justify-content: space-around;
-    position: absolute;
-    bottom: 40px; }
-    header .icons #like {
-      font-size: 12px;
-      text-align: center;
-      line-height: 20px;
-      display: block;
-      width: 15px;
-      height: 15px;
-      position: relative;
-      color: #d33;
-      top: -17px;
-      right: -25px;
-      font-family: 'Noto Sans TC';
-      font-weight: 700; }
-    header .icons a {
-      text-decoration: none;
-      color: #fff; }
-      header .icons a:hover {
-        transform: scale(1.15);
-        transition: .3s; }
-
-.hb {
-  position: absolute;
-  z-index: 999999999;
-  background-color: #eaaf88;
-  padding: 2px 5px;
-  border-radius: 0 0 10px 10px;
-  display: none;
-  bottom: -68px;
-  right: 0;
-  padding: 15px 10px 10px 10px; }
-
-header.active {
-  transform: translateY(0);
-  transition: .6s; }
-
-.hamburger .line {
-  width: 40px;
-  height: 4px;
-  background-color: #ffffff;
-  display: block;
-  margin: 8px auto;
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out; }
-
-.hamburger:hover {
-  cursor: pointer; }
-
-#hamburger-6.is-active {
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  -webkit-transition-delay: 0.6s;
-  -o-transition-delay: 0.6s;
-  transition-delay: 0.6s;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg); }
-
-#hamburger-6.is-active .line:nth-child(2) {
-  width: 0px; }
-
-#hamburger-6.is-active .line:nth-child(1),
-#hamburger-6.is-active .line:nth-child(3) {
-  -webkit-transition-delay: 0.3s;
-  -o-transition-delay: 0.3s;
-  transition-delay: 0.3s; }
-
-#hamburger-6.is-active .line:nth-child(1) {
-  -webkit-transform: translateY(10px);
-  -ms-transform: translateY(10px);
-  -o-transform: translateY(10px);
-  transform: translateY(10px); }
-
-#hamburger-6.is-active .line:nth-child(3) {
-  -webkit-transform: translateY(-14px) rotate(90deg);
-  -ms-transform: translateY(-14px) rotate(90deg);
-  -o-transform: translateY(-14px) rotate(90deg);
-  transform: translateY(-14px) rotate(90deg); }
-
 footer {
   background-color: #f5eae3;
   margin-left: 200px;
@@ -688,3 +561,163 @@ h2 {
       display: block;
       text-align: center;
       top: -10px; } }
+
+header {
+  background-color: #eaaf88;
+  width: 200px;
+  height: 100vh;
+  position: fixed;
+  padding-left: 15px;
+  box-shadow: 2px 0 10px rgba(153, 153, 153, 0.315);
+  z-index: 999; }
+  header .logo {
+    position: relative;
+    top: 60px;
+    width: 180px;
+    text-align: center; }
+    header .logo a {
+      text-decoration: none;
+      color: #fff; }
+    header .logo img {
+      width: 80%; }
+  header ul {
+    position: absolute;
+    bottom: 180px; }
+    header ul li {
+      margin: 1px 0;
+      position: relative; }
+      header ul li:hover {
+        background-color: #fff;
+        box-shadow: -2px 3px 6px rgba(63, 62, 62, 0.397);
+        transition: .3s; }
+      header ul li:hover a {
+        color: #000;
+        transition: .3s; }
+      header ul li a {
+        width: 185px;
+        display: block;
+        color: #fff;
+        text-decoration: none;
+        font-size: 18px;
+        padding: 15px 20px; }
+  header .icons {
+    width: 180px;
+    display: flex;
+    padding: 15px;
+    padding-right: 20px;
+    justify-content: space-around;
+    position: absolute;
+    bottom: 40px; }
+    header .icons #like {
+      font-size: 12px;
+      text-align: center;
+      line-height: 20px;
+      display: block;
+      width: 15px;
+      height: 15px;
+      position: relative;
+      color: #d33;
+      top: -17px;
+      right: -25px;
+      font-family: 'Noto Sans TC';
+      font-weight: 700; }
+    header .icons a {
+      text-decoration: none;
+      color: #fff; }
+      header .icons a:hover {
+        transform: scale(1.15);
+        transition: .3s; }
+
+.hb {
+  position: absolute;
+  z-index: 999999999;
+  background-color: #eaaf88;
+  padding: 2px 5px;
+  border-radius: 0 0 10px 10px;
+  display: none;
+  bottom: -68px;
+  right: 0;
+  padding: 15px 10px 10px 10px; }
+
+header.active {
+  transform: translateY(0);
+  transition: .6s; }
+
+.hamburger .line {
+  width: 40px;
+  height: 4px;
+  background-color: #ffffff;
+  display: block;
+  margin: 8px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
+
+.hamburger:hover {
+  cursor: pointer; }
+
+#hamburger-6.is-active {
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition-delay: 0.6s;
+  -o-transition-delay: 0.6s;
+  transition-delay: 0.6s;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg); }
+
+#hamburger-6.is-active .line:nth-child(2) {
+  width: 0px; }
+
+#hamburger-6.is-active .line:nth-child(1),
+#hamburger-6.is-active .line:nth-child(3) {
+  -webkit-transition-delay: 0.3s;
+  -o-transition-delay: 0.3s;
+  transition-delay: 0.3s; }
+
+#hamburger-6.is-active .line:nth-child(1) {
+  -webkit-transform: translateY(10px);
+  -ms-transform: translateY(10px);
+  -o-transform: translateY(10px);
+  transform: translateY(10px); }
+
+#hamburger-6.is-active .line:nth-child(3) {
+  -webkit-transform: translateY(-14px) rotate(90deg);
+  -ms-transform: translateY(-14px) rotate(90deg);
+  -o-transform: translateY(-14px) rotate(90deg);
+  transform: translateY(-14px) rotate(90deg); }
+
+@media all and (max-width: 991px) {
+  header {
+    top: 0;
+    right: 5%;
+    margin: auto;
+    width: 30%;
+    height: 70vh;
+    transform: translateY(-100%);
+    border-radius: 0 0 0 30px;
+    display: block !important; }
+    header .logo {
+      left: calc(50% - 90px);
+      top: 10px; }
+    header ul {
+      width: 90%;
+      bottom: 120px; }
+      header ul li a {
+        width: 100%;
+        text-align: center; }
+    header .icons {
+      left: 0;
+      right: 0;
+      margin: auto; }
+  .hb {
+    display: block; } }
+
+@media all and (max-width: 767px) {
+  header {
+    width: 90%;
+    height: 75vh; }
+    header .logo img {
+      width: 70%; } }
