--- a/css/index.css
+++ b/css/index.css
@@ -1234,7 +1234,8 @@ footer {
     width: 30%;
     height: 70vh;
     transform: translateY(-100%);
-    border-radius: 0 0 0 30px; }
+    border-radius: 0 0 0 30px;
+    display: block !important; }
     header .logo {
       left: calc(50% - 90px);
       top: 10px; }
