--- a/sass/forum-p1.scss
+++ b/sass/forum-p1.scss
@@ -7,9 +7,11 @@
 @import 'mixins/_afterClear.scss';
 @import 'mixins/_navNow.scss';
 @import 'mixins/_rwd.scss';
-@import 'modules/_header.scss';
 @import 'modules/_footer.scss';
 @import 'modules/_btns.scss';
 @import 'modules/_forum-p1.scss';
 @import 'modules/_signIn.scss';
 @import 'respond/_footerSmall.scss';
+@import './modules/_header.scss';
+@import './respond/_headerMedium.scss';
+@import './respond/_headerSmall.scss';
