--- a/sass/halfMem.scss
+++ b/sass/halfMem.scss
@@ -15,3 +15,5 @@
 @import 'respond/_halfMemberMedium.scss';
 @import 'respond/_halfMemberSmall.scss';
 @import 'respond/_footerSmall.scss';
+@import './respond/_headerMedium.scss';
+@import './respond/_headerSmall.scss';
