--- a/sass/member.scss
+++ b/sass/member.scss
@@ -15,3 +15,5 @@
 @import 'respond/_memberMedium.scss';
 @import 'respond/_memberSmall.scss';
 @import 'respond/_footerSmall.scss';
+@import './respond/_headerMedium.scss';
+@import './respond/_headerSmall.scss';
