--- a/css/Cat_ShoppingStore.css
+++ b/css/Cat_ShoppingStore.css
@@ -239,15 +239,15 @@ footer {
 
 @media all and (max-width: 991px) {
   footer {
-    margin-left: 0;
-    width: 100%; } }
+    margin-left: 0 !important;
+    width: 100% !important; } }
 
 @media all and (max-width: 767px) {
-  .section footer {
+  footer {
     margin-left: 0;
     width: 100%;
     height: 20vh; }
-    .section footer span {
+    footer span {
       display: block;
       text-align: center;
       top: -10px; } }
@@ -611,6 +611,14 @@ h2 {
   margin-bottom: 4%;
   padding-bottom: 8%; }
 
+#pdContent {
+  position: relative; }
+
+#pdContent:after {
+  content: '';
+  display: block;
+  clear: both; }
+
 .addButton {
   border-radius: 100px;
   cursor: pointer;
@@ -635,7 +643,8 @@ h2 {
 
 @media only screen and (max-width: 767px) {
   .product {
-    width: 50%; } }
+    width: 100%;
+    margin: auto; } }
 
 .pic:hover {
   transform: scale(1.1); }
