--- a/css/halfway_house_detail.css
+++ b/css/halfway_house_detail.css
@@ -316,15 +316,15 @@ footer {
 
 @media all and (max-width: 991px) {
   footer {
-    margin-left: 0;
-    width: 100%; } }
+    margin-left: 0 !important;
+    width: 100% !important; } }
 
 @media all and (max-width: 767px) {
-  .section footer {
+  footer {
     margin-left: 0;
     width: 100%;
     height: 20vh; }
-    .section footer span {
+    footer span {
       display: block;
       text-align: center;
       top: -10px; } }
