--- a/css/halfway_house_search.css
+++ b/css/halfway_house_search.css
@@ -280,55 +280,6 @@ header.active {
   -o-transform: translateY(-14px) rotate(90deg);
   transform: translateY(-14px) rotate(90deg); }
 
-footer {
-  background-color: #f5eae3;
-  margin-left: 200px;
-  padding: 15px; }
-  footer .follow {
-    padding: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-  footer nav {
-    margin: auto; }
-    footer nav ul {
-      display: flex;
-      justify-content: space-around; }
-      footer nav ul li {
-        width: 20%;
-        margin: 15px; }
-        footer nav ul li:hover {
-          transform: translateY(-3px);
-          transition: .35s; }
-        footer nav ul li a {
-          text-align: center;
-          border: 1px solid #333;
-          text-decoration: none;
-          color: #333;
-          display: block;
-          width: 100%;
-          padding: 15px; }
-  footer span {
-    display: inline-block;
-    position: relative;
-    top: -20px;
-    padding: 10px; }
-
-@media all and (max-width: 991px) {
-  footer {
-    margin-left: 0;
-    width: 100%; } }
-
-@media all and (max-width: 767px) {
-  .section footer {
-    margin-left: 0;
-    width: 100%;
-    height: 20vh; }
-    .section footer span {
-      display: block;
-      text-align: center;
-      top: -10px; } }
-
 .btns .btn {
   font-size: 30px;
   display: inline-block;
@@ -790,3 +741,52 @@ header ul li:nth-child(2):after {
     height: 75vh; }
     header .logo img {
       width: 70%; } }
+
+footer {
+  background-color: #f5eae3;
+  margin-left: 200px;
+  padding: 15px; }
+  footer .follow {
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  footer nav {
+    margin: auto; }
+    footer nav ul {
+      display: flex;
+      justify-content: space-around; }
+      footer nav ul li {
+        width: 20%;
+        margin: 15px; }
+        footer nav ul li:hover {
+          transform: translateY(-3px);
+          transition: .35s; }
+        footer nav ul li a {
+          text-align: center;
+          border: 1px solid #333;
+          text-decoration: none;
+          color: #333;
+          display: block;
+          width: 100%;
+          padding: 15px; }
+  footer span {
+    display: inline-block;
+    position: relative;
+    top: -20px;
+    padding: 10px; }
+
+@media all and (max-width: 991px) {
+  footer {
+    margin-left: 0 !important;
+    width: 100% !important; } }
+
+@media all and (max-width: 767px) {
+  footer {
+    margin-left: 0;
+    width: 100%;
+    height: 20vh; }
+    footer span {
+      display: block;
+      text-align: center;
+      top: -10px; } }
