--- a/css/index.css
+++ b/css/index.css
@@ -246,15 +246,15 @@ footer {
 
 @media all and (max-width: 991px) {
   footer {
-    margin-left: 0;
-    width: 100%; } }
+    margin-left: 0 !important;
+    width: 100% !important; } }
 
 @media all and (max-width: 767px) {
-  .section footer {
+  footer {
     margin-left: 0;
     width: 100%;
     height: 20vh; }
-    .section footer span {
+    footer span {
       display: block;
       text-align: center;
       top: -10px; } }
@@ -569,7 +569,7 @@ header.active {
               height: 250px;
               border-radius: 50%;
               display: block;
-              background-color: rgba(255, 255, 255, 0.687);
+              background-color: rgba(255, 255, 255, 0.548);
               margin: 0 auto;
               display: flex;
               flex-direction: column;
