--- a/css/member.css
+++ b/css/member.css
@@ -310,15 +310,15 @@ footer {
 
 @media all and (max-width: 991px) {
   footer {
-    margin-left: 0;
-    width: 100%; } }
+    margin-left: 0 !important;
+    width: 100% !important; } }
 
 @media all and (max-width: 767px) {
-  .section footer {
+  footer {
     margin-left: 0;
     width: 100%;
     height: 20vh; }
-    .section footer span {
+    footer span {
       display: block;
       text-align: center;
       top: -10px; } }
@@ -740,15 +740,15 @@ header ul li:nth-child(5):after {
 
 @media all and (max-width: 991px) {
   footer {
-    margin-left: 0;
-    width: 100%; } }
+    margin-left: 0 !important;
+    width: 100% !important; } }
 
 @media all and (max-width: 767px) {
-  .section footer {
+  footer {
     margin-left: 0;
     width: 100%;
     height: 20vh; }
-    .section footer span {
+    footer span {
       display: block;
       text-align: center;
       top: -10px; } }
