--- a/sass/modules/_Cat_ShoppingStore.scss
+++ b/sass/modules/_Cat_ShoppingStore.scss
@@ -254,7 +254,14 @@ h2 {
 	margin-bottom: 4%;
 	padding-bottom: 8%;
 }
-
+#pdContent{
+	position: relative;
+}
+#pdContent:after{
+	content: '';
+	display: block;
+	clear: both;
+}
 .addButton{
     border-radius: 100px;
     cursor: pointer;
@@ -286,7 +293,8 @@ h2 {
 
 @media only screen and (max-width: 767px) {
 	.product {
-		width: 50%;
+		width: 100%;
+		margin: auto;
 	}
 }
 
