--- a/sass/modules/_catContent.scss
+++ b/sass/modules/_catContent.scss
@@ -41,6 +41,7 @@
                 position: relative;
                 width: calc(100% - 310px);
                 height: 400px;
+                font-size: $font-size-large;
                 h1 {
                     font-size: $font-size-h2;
                     font-weight: bold;
@@ -108,13 +109,14 @@
         }
         .introduction {
             letter-spacing: 2px;
-            line-height: 1.5em;
-            font-size: $font-size-base;
+            line-height: 2em;
+            font-size: $font-size-large;
             .title {
                 display: block;
                 margin-top: 30px;
                 margin-bottom: 10px;
                 font-weight: bold;
+                font-size: $font-size-h4;
             }
             small {
                 font-size: $font-size-small;
@@ -124,11 +126,11 @@
                 .cost {
                     color: rgb(105, 105, 240);
                     margin-top: 10px;
-                    font-size: $font-family-serif;
+                    font-size: $font-size-large;
                     font-weight: bold;
+                    display: inline-block;
                 }
                 p {
-                    padding-left: 86px;
                     span {
                         color: #fa9c29;
                     }
