--- a/sass/respond/_catContentMedium.scss
+++ b/sass/respond/_catContentMedium.scss
@@ -6,6 +6,7 @@
         width: 100%;
         margin: 0;
         .container1 {
+            margin-top: 60px;
             padding-left: 50px;
             padding-right: 50px;
             .catItem {
